--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:fix": "npm run lint -- --fix",
     "test": "jest --passWithNoTests --no-cache --runInBand",
     "test:watch": "npm run test -- --watch",
+    "test:staged": "npm run test -- --findRelatedTests",
     "test:coverage": "npm run test -- --coverage"
   },
   "repository": {
@@ -33,6 +34,7 @@
     "eslint-plugin-n": "^15.5.1",
     "eslint-plugin-promise": "^6.1.1",
     "jest": "^29.3.1",
+    "lint-staged": "^13.0.4",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
   },
